--- a/emaildata/email.properties
+++ b/emaildata/email.properties
@@ -4,4 +4,4 @@ mail.smtps.starttls.enable=true
 mail.smtps.host=smtp.gmail.com
 mail.smtps.auth=false
 email.fromUser=apmeneel@ncsu.edu
-email.port=465]
+email.port=465
