--- a/emaildata/email.properties
+++ b/emaildata/email.properties
@@ -5,3 +5,4 @@ mail.smtps.host=smtp.gmail.com
 mail.smtps.auth=false
 email.fromUser=apmeneel@ncsu.edu
 email.port=465
+email.listFile=c:/data/wireshark/email-tests.txt
