added the production line, but commented out

--- a/emaildata/email.properties
+++ b/emaildata/email.properties
@@ -6,3 +6,4 @@ mail.smtps.auth=false
 email.fromUser=apmeneel@ncsu.edu
 email.port=465
 email.listFile=c:/data/wireshark/email-tests.txt
+#email.listFile=c:/data/wireshark/developer-survey-email-list.txt
