the second solicitation we sent out to PHP developers

--- a/emaildata/email.properties
+++ b/emaildata/email.properties
@@ -7,3 +7,5 @@ email.fromUser=apmeneel@ncsu.edu
 email.port=465
 email.listFile=c:/data/wireshark/email-tests.txt
 #email.listFile=c:/data/wireshark/developer-survey-email-list.txt
+#email.listFile=c:/data/wireshark/developer-survey-email-list-followup.txt
+#email.listFile=c:/data/php/developer-survey-email-list-followup.txt
