--- a/emaildata/email.properties
+++ b/emaildata/email.properties
@@ -9,3 +9,4 @@ email.listFile=c:/data/wireshark/email-tests.txt
 #email.listFile=c:/data/wireshark/developer-survey-email-list.txt
 #email.listFile=c:/data/wireshark/developer-survey-email-list-followup.txt
 #email.listFile=c:/data/php/developer-survey-email-list-followup.txt
+#email.listFile=c:/data/linux-history/linux-developer-survey-email-list.txt
